--- a/mystylesheet.css
+++ b/mystylesheet.css
@@ -6,32 +6,71 @@ html {
 }
 
 body {
-  background-color: white;
+  background-color: #F4F4E9;
   font: 100%/1.4 Arial, sans-serif;
-  
+  margin:0rem;
+  padding:0;
+  height:100%;
 }
 
-header {
-  background-color: white;
-  color: white;
-  padding: 1rem;
+#Container {
+  min-height:100%;
+  position:relative;
+  margin-right: 0rem; 
+  border: 0;
+  padding: 0;
+}
+#header {
+  padding: 0rem;
+  background-color: #F4F4E9;
   text-align: center;
+  object-position: left;
+}
+#content {
+  min-height: 100%;
+  padding-bottom: 5rem;/* Height of the footer element */
+  margin: 0rem;
 }
 
-aside {
-  background-color: white;
-  padding: 1rem;
+#aside {
+  background-color: none;
+  max-width: 33.5%
+  min-height: 100%;
+  margin: 0rem;
+  border: 0rem;
+  padding: 0rem;
+  line-height: 1rem;
 }
-
+#footer {
+  background: none;
+  font-size: 75%;
+  width:100%;
+  height: 2rem;
+  bottom:0;
+  left:0;
+  color: black;
+  font-family: 'Spinnaker', sans-serif;
+}
+/*
+  _____                                 _           
+ |  __ \                               (_)          
+ | |__) |___  ___ _ __   ___  _ __  ___ ___   _____ 
+ |  _  // _ \/ __| '_ \ / _ \| '_ \/ __| \ \ / / _ \
+ | | \ \  __/\__ \ |_) | (_) | | | \__ \ |\ V /  __/
+ |_|  \_\___||___/ .__/ \___/|_| |_|___/_| \_/ \___|
+                 | |                                
+                 |_| 
+*/
 @media screen and (min-width: 480px) {
     body {
-        background-color: lightgreen;
+        background-color: #F4F4E9;
+
     }
 }
 
 @media screen and (min-width: 768px) {
     body {
-        background-color: lightgray;
+        background-color: #F4F4E9;
     }
   .wrapper {
     margin: 3em;
@@ -41,81 +80,103 @@ aside {
 
 @media screen and (min-width: 1024px) {
     body {
-        background-color: #67A1C0;
+        background-color: #F4F4E9;
     }
   .wrapper { padding: 3em; }
 }
 
 /*
-$$\   $$\                     $$\                           
-$$$\  $$ |                    $$ |                          
-$$$$\ $$ | $$$$$$\ $$\    $$\ $$$$$$$\   $$$$$$\   $$$$$$\  
-$$ $$\$$ | \____$$\\$$\  $$  |$$  __$$\  \____$$\ $$  __$$\ 
-$$ \$$$$ | $$$$$$$ |\$$\$$  / $$ |  $$ | $$$$$$$ |$$ |  \__|
-$$ |\$$$ |$$  __$$ | \$$$  /  $$ |  $$ |$$  __$$ |$$ |      
-$$ | \$$ |\$$$$$$$ |  \$  /   $$$$$$$  |\$$$$$$$ |$$ |      
-\__|  \__| \_______|   \_/    \_______/  \_______|\__|
+  _   _             ____             
+ | \ | |           |  _ \            
+ |  \| | __ ___   _| |_) | __ _ _ __ 
+ | . ` |/ _` \ \ / /  _ < / _` | '__|
+ | |\  | (_| |\ V /| |_) | (_| | |   
+ |_| \_|\__,_| \_/ |____/ \__,_|_| 
 */
 nav {
     background-color: none;
-    color: black;
-    font-size: 2vw;
-    font-family: 'Syncopate', sans-serif;
+    color: #F4F4E9;
+    font-size:calc(45% + 1vw);
+    font-family: "Spinnaker", sans-serif;
     text-align: right;
-    line-height: .5rem; 
-    padding: 1.5rem;
-    border: 1.5rem;
-    margin: .5rem;
+    line-height: 1.5rem; 
+    padding-right: 1rem;
+    padding-top: .20rem;
+    border: 0rem;
+    margin: .5rem 0rem 0rem 0rem;
     width: 100%;
-    height: .5rem;
+    height: 2rem;
 }
 
 	ul {
     	list-style-type: none;
     	margin: 0;
-    	padding: 0;
+    	border: 0;
+      padding: 0;
+
 		}
 
 	li {
-
     	display: inline;
     	margin: 0;
+      margin-left: 20px;
 		}
 
 	a {
-  		margin-left: 20px;
-  		color: #104B88;
+  		color: #12436B;
   		text-decoration: none;
   		font-weight: bold;
+      margin: 0;
+      border: 0;
+      padding: 0;
   		}
 
 .nav2 {
   color: #882601;
-	font-family: 'Jura', sans-serif;
+  background-color: #F4F4E9;
+  font-size:calc(45% + 1vw);
+	font-family: "Spinnaker", sans-serif;
 	font-weight: normal;
-	line-height: 1em;
+	line-height: 2em;
 	height: 2em;
 	margin: 0em;
+  border: 0em;
+  padding: 0rem;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
+
+.bioImg {
+  margin-left: 5rem;
+  margin-right: 0rem;
+  margin-bottom: 1rem;
+  border-left: 1rem;
+  padding-left: 1rem;
+
 }
 
 /*
-$$\   $$\                           $$\                     
-$$ |  $$ |                          $$ |                    
-$$ |  $$ | $$$$$$\   $$$$$$\   $$$$$$$ | $$$$$$\   $$$$$$\  
-$$$$$$$$ |$$  __$$\  \____$$\ $$  __$$ |$$  __$$\ $$  __$$\ 
-$$  __$$ |$$$$$$$$ | $$$$$$$ |$$ /  $$ |$$$$$$$$ |$$ |  \__|
-$$ |  $$ |$$   ____|$$  __$$ |$$ |  $$ |$$   ____|$$ |      
-$$ |  $$ |\$$$$$$$\ \$$$$$$$ |\$$$$$$$ |\$$$$$$$\ $$ |      
-\__|  \__| \_______| \_______| \_______| \_______|\__| 
+  _    _                _           
+ | |  | |              | |          
+ | |__| | ___  __ _  __| | ___ _ __ 
+ |  __  |/ _ \/ _` |/ _` |/ _ \ '__|
+ | |  | |  __/ (_| | (_| |  __/ |   
+ |_|  |_|\___|\__,_|\__,_|\___|_|  
 */                                                                      
 h1 {
-    color: #1A85C0;
-    font-size: 5vw;
-    font-family: 'Russo One', sans-serif;
-    letter-spacing: 2px;
+    column-span: all;
+    font-family: "Book Antiqua", serif;
+    color: white;
+    background-color: #015395;
+    padding-left: 1rem;
+    margin: 1rem auto;
+    font-size:calc(85% + 1.5vw);
     text-align: left;
-    background-color: none;
-    line-height: 1rem; 
+    line-height: 2.5rem; 
     height: 40px;
     padding-left: 20px;
     border: 0em;
@@ -123,43 +184,60 @@ h1 {
     margin-bottom: 0px;
   }
 
+h2{
+    column-span: all;
+    font-family: "Book Antiqua", serif;
+    color: white;
+    background-color: #015395;
+    padding-left: 1rem;
+    margin: 1rem auto;
+
+}
 h3 {
-    color: #C07006;
-    font-size: 2vw;
+    color: #782320;
+    font-size:calc(45% + 2vw);
     font-family: 'Jura', sans-serif;
+    text-shadow: 1px 1px #898989;
     letter-spacing: 2px;
     text-align: right;
     line-height: .5rem; 
-    padding: .5rem;
+    padding: 1rem;
     border: 0rem;
-    margin: .5rem;
+    margin: 0rem;
     width: 100%;
     height: 100%;
 }
 
-h6 {
-  color: gray;
-
+h5 {
+  color: #146CB5;
+  text-align: center;
 }
 
-/*
-$$$$$$$$\                   $$\                         
-$$  _____|                  $$ |                        
-$$ |    $$$$$$\   $$$$$$\ $$$$$$\    $$$$$$\   $$$$$$\  
-$$$$$\ $$  __$$\ $$  __$$\\_$$  _|  $$  __$$\ $$  __$$\ 
-$$  __|$$ /  $$ |$$ /  $$ | $$ |    $$$$$$$$ |$$ |  \__|
-$$ |   $$ |  $$ |$$ |  $$ | $$ |$$\ $$   ____|$$ |      
-$$ |   \$$$$$$  |\$$$$$$  | \$$$$  |\$$$$$$$\ $$ |      
-\__|    \______/  \______/   \____/  \_______|\__|
-*/
-.footer {
-  position: bottom;
-  text-align: center;
-  padding: 0rem;
-  border: 0rem;
-  margin: 0rem;
-  width: 100%;
-  line-height: 1rem;
-  background-color: none;
+h6 {
+  color: #898989;
+  text-align: right;
+  font: 50%/1.4 Arial, sans-serif;
+  padding-right: 1rem;
+}
+
+.catHead{
+  max-width: 100%;
+}
+.paragraph {
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-width: 200px;
+  -moz-column-width: 200px;
+  column-width: 200px;
+  margin: 1rem;
+  font-size:calc(85% + .25vw);
   color: black;
-  font-family: 'Spinnaker', sans-serif;
+  max-width: 100%;
+}
+.resume {
+  margin: 1rem;
+  font-size:calc(85% + .25vw);
+  color: black;
+  max-width: 65.5%;
+}
